# bayesian-slam

./: .gitignore  README.md  higherorder.tex  robustEst.tex
.github/workflows/: rust-tests.yml
eps/: Bayesomega0005.eps  Bayestexp05.eps  Festmomega.eps  KFslam.eps  LMedSqomega.eps  LMedSqtexp.eps  SE3addT.eps  SE3compomega.eps  SE3compt.eps  SLAM.eps  costplot1v2.eps  costplot2.eps  normal.eps  p08SxzExp.eps  p08SxzWT.eps  p08TxzExp.eps  p50SxzExp.eps  p50TxzWT.eps
experiments/: PLOTTING.md  README.md  plot_bias_experiment.py  plot_convergence.py
experiments/data/: README.md
paper/: SE3_inference.tex  SE3_inference_paper.tex  higherorder.tex  robustEst.tex
paper/eps/: Bayesomega05.eps  Bayestexp0005.eps  Expdistxz1.eps  Expdistxz2.eps  Festmtexp.eps  FullSlam.eps  PrincipalSLAM1.eps  SE3addomega.eps  SE3comp.eps  bundle.eps  costplot1.eps  mKFgraph.eps  p08TxzWT.eps  p50SxzWT.eps  p50TxzExp.eps  phasewrap.eps  realimage.eps  sphere.eps
paper/figures/: .gitignore  bias_scatter_rotation.pgf  bias_scatter_translation.pgf
rust/: Cargo.toml  README.md
rust/examples/: bias_experiment.rs  multicam_experiment.rs  multicam_saddlepoint.rs  pose_inference.rs
rust/src/: bch.rs  jacobians.rs  lib.rs  projective.rs  propagation.rs  saddlepoint.rs  se3.rs  so3.rs
verification/: CouplingJacobianDerivation.m  README.md  SE3AlgebraVerification.m   SE3Verification.nb  SaddlepointVerification.m
